examples/test/testpolicy13738.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13738
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key30: value27
      key41: value21
      key15: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value30
          key1: value13
          key38: value15
